style.css
/*
Theme Name: FTC Union Stewart
Theme URI: https://github.com/ftcunion/ftcunion-stewart
Author: Matthew W. Thomas
Author URI: https://www.matthewthom.as
Description: Child theme of Stuart
Requires at least: 6.1
Tested up to: 6.8.1
Requires PHP: 7.0
Version: 7.1.0
License: GNU General Public License v2 or later
License URI: http://www.gnu.org/licenses/gpl-2.0.html
Template: stewart
Text Domain: ftcunion-stewart
Tags: two-columns, custom-colors, custom-menu, custom-logo, editor-style, featured-images, full-site-editing, block-patterns, rtl-language-support, sticky-post, threaded-comments
*/

/* Stable scrollbar */
:root {
    scrollbar-gutter: stable;
    color-scheme: light;
}

/* Font metrics */
body {
    font-size-adjust: cap-height 0.738;
}

/* Advanced spacing */
:root :is(p, .wp-block-list)+:where(.wp-block-list) {
    margin-block-start: 0;
}

:root :is(.wp-block-heading)+:where(.wp-block-heading) {
    padding-top: 0;
}

/* Stretch Footer */
html,
body {
    height: 100%;
}

.wp-site-blocks {
    overflow-y: hidden;
    min-height: 100%;
}

footer {
    padding-bottom: 100vh;
    margin-block-end: -100vh !important;
    box-shadow: inset 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
    margin-top: 2.75rem;
}

/* Special nav logo */
.wp-block-site-title a {
    display: inline-block;
    vertical-align: top;
    overflow: clip;
    white-space: nowrap;
    margin: 0;
    padding: 0;
}

.wp-block-site-title a::before {
    content: url('./assets/images/site-title-simplified-svgo.svg');
    font-size: 0;
    line-height: 0;
}

/* Scale pattern */
.scale-pattern,
footer {
    background-image: url('./assets/images/scale-pattern-svgo.svg');
    background-size: 5.5rem;
}

/* Member banner same height as header */
.ftcunion-member-banner {
    min-height: 70px;
}

/* Member-only login form */
form[action$="/union-access.php"] .input-group {
    display: flex;
    padding: 1px;
    font-size: var(--wp--preset--font-size--normal);
    overflow-x: clip;
    margin-bottom: 0.5em;
    align-items: center;
}

form[action$="/union-access.php"] .input-group:has(input[type="email"]) {
    align-items: stretch;
}

form[action$="/union-access.php"] .input-group input[type="email"] {
    flex-grow: 1;
    padding: .8em;
    border: none;
    border-radius: .4em 0 0 .4em;
    outline: 1px solid var(--wp--preset--color--foreground-headers);
    background: var(--wp--preset--color--background);
    color: var(--wp--preset--color--foreground-text);
}

form[action$="/union-access.php"] .input-group input[type="checkbox"]+label {
    margin-left: 0.25em;
}

form[action$="/union-access.php"] .input-group button {
    padding: .6em 1.2em;
    border: none;
    border-radius: 0 .4em .4em 0;
    outline: 1px solid var(--wp--preset--color--foreground-headers);
    font-family: inherit;
    background-color: var(--wp--preset--color--secondary);
    word-break: keep-all;
}

form[action$="/union-access.php"] button svg {
    vertical-align: middle;
}

form[action$="/union-access.php"] button:hover,
form[action$="/union-access.php"] button:active,
form[action$="/union-access.php"] button:focus {
    background-color: var(--wp--preset--color--foreground-headers);
}

@media(width < 600px) {

    /* Hide some nav elements on mobile */
    header .wp-block-spacer {
        display: none;
    }

    .mobile-flex~.wp-block-separator {
        margin-block-start: 0;
    }

    .mobile-flex {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: space-between;
        align-items: center;
    }

    .mobile-hide {
        display: none;
    }

    /* Adjust nav padding */
    nav>.wp-block-navigation__responsive-container.is-menu-open {
        padding-top: 2.3rem;
    }

    header+.wp-block-group {
        margin-top: 0;
    }

    /* Adjust spacing of social icons */
    :root .is-layout-flow>.wp-block-social-links {
        margin-block-start: 0.85rem;
    }

    /* Fix spacing of title when there is no logo */
    .wp-block-site-title {
        margin-block-start: var(--wp--style--block-gap) !important;
        line-height: 1.5;
    }

    /* Unset min-height on member banner */
    .ftcunion-member-banner {
        min-height: unset;
    }

    .ftcunion-member-banner+ :has(nav) {
        margin-top: 0;
    }
}

/* Hide member post type on print */
@media print {

    body.single-member-post main,
    body.post-type-archive-member-post main {
        display: none !important;
    }
}

/* Customize Mobile Navigation */

.wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__container {
    font-size: var(--wp--preset--font-size--extra-large);
    font-weight: 700;
    gap: 0.5rem;
}

.wp-block-navigation__responsive-container.is-menu-open a {
    text-decoration: none;
}

@media not (prefers-reduced-motion) {
    .wp-block-navigation__responsive-container.is-menu-open {
        animation: overlay-menu__custom-fade-in-animation 0.3s ease-in-out;
        animation-fill-mode: forwards;
    }
}

@keyframes overlay-menu__custom-fade-in-animation {
    0% {
        transform: translateX(100vw);
    }

    to {
        transform: translateY(0);
    }
}

/* Light and Dark Mode Toggle */
:root:not(.ftcunion-dark) .wp-social-link-ftcunion-social-link-light {
    display: none !important;
}

:root.ftcunion-dark .wp-social-link-ftcunion-social-link-dark {
    display: none !important;
}

:root.ftcunion-dark {
    color-scheme: dark;
    --wp--preset--color--foreground-text: #dfdfdf;
    --wp--preset--color--foreground-headers: #f1f1f1;
    --wp--preset--color--background: #000;
    --wp--preset--color--primary: #ffa057;
    --wp--preset--color--secondary: #70b8ff;
    --wp--preset--color--tertiary: #e5484d;
    --wp--preset--color--primary-text-dark: #dfdfdf;
    --wp--preset--color--secondary-text-dark: #dfdfdf;
    --wp--preset--color--tertiary-text-dark: #dfdfdf;
}

:root.ftcunion-dark .wp-block-site-title a::before {
    content: url('./assets/images/site-title-simplified-inverse-svgo.svg');
}

